# gtools

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: lint.yml  release.yml  test.yml
src/gtools/: __init__.py  __main__.py  datamodel.py  plotting.py  types.py
src/gtools/boss/: parameters.py  quick_bias.py  tools.py
src/gtools/dataviz/: views.py
src/gtools/fps/: __init__.py  configuration.py  plotting.py
src/gtools/lvm/: monitor.py  plotting.py  sframe_to_parquet.py
src/gtools/lvm/pipe/: __init__.py  defaults.py  detrend.py  extraction.py  flux_calibration.py  plotting.py  self_calibration.py  tools.py
src/gtools/lvm/pipe/data/: cent_trace.parquet  width_trace.parquet
