[tool.poetry]
name = "gtools"
version = "0.1.0-alpha.0"
description = "Personal tools and code"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-clause"
readme = "README.md"
packages = [ { include = "gtools", from = "src" } ]
include = []

[tool.poetry.dependencies]
python = "^3.10,<3.11"
numpy = "^1.23.0"
astropy = "^5.1"
scipy = "^1.8.1"
seaborn = "^0.11.2"
pandas = "^1.4.3"
sdsstools = "^0.5.2"
click = "^8.1.3"
click-default-group = "^1.2.2"
scikit-image = "^0.19.3"

[tool.poetry.dev-dependencies]
ipython = ">=8.0.0"
flake8 = ">=3.7.9"
isort = ">=4.3.21"
ipdb = ">=0.12.3"
toml = ">=0.10.0"
black = {version = ">=21.7b0", allow-prereleases = true}

[tool.poetry.scripts]
gtools = 'gtools.__main__:gtools'

[tool.black]
line-length = 88
target-version = ['py310']
fast = true

[tool.isort]
profile = "black"
sections = ["FUTURE", "STDLIB", "TYPING", "THIRDPARTY", "SDSS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
known_first_party = "gtools"
known_typing = ["typing"]
known_sdss = ["sdsstools", "clu", "sdssdb"]
lines_after_imports = 2

[tool.pytest.ini_options]
addopts = "--cov gtools --cov-report xml --cov-report html --cov-report term"

[tool.coverage.run]
branch = true
include = ["gtools/*"]
omit = [
    "*/__init__.py",
    "gtools/__main__.py"
]

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:"
]

[build-system]
requires = ["poetry-core>=1.1.0b2"]
build-backend = "poetry.core.masonry.api"
