[tool.poetry]
name = "gtools"
version = "0.1.0-alpha.0"
description = "Personal tools and code"
authors = ["José Sánchez-Gallego <gallegoj@uw.edu>"]
license = "BSD-3-clause"
readme = "README.md"
packages = [ { include = "gtools", from = "src" } ]
include = []

[tool.poetry.dependencies]
python = "^3.10,<3.12"
numpy = "^1.23.0"
astropy = "^5.1"
scipy = "^1.8.1"
seaborn = ">=0.12.0"
pandas = "^2.0.0"
sdsstools = "^1.0.0"
click = "^8.1.3"
click-default-group = "^1.2.2"

[tool.poetry.group.dev.dependencies]
ipython = ">=8.0.0"
flake8 = ">=3.7.9"
isort = ">=4.3.21"
ipdb = ">=0.12.3"
toml = ">=0.10.0"
black = {version = ">=21.7b0", allow-prereleases = true}
ruff = ">=0.0.286"

[tool.poetry.scripts]
gtools = 'gtools.__main__:gtools'

[tool.black]
line-length = 88
target-version = ['py311']
fast = true

[tool.ruff]
line-length = 88
target-version = 'py311'
select = ["E", "F", "I"]
unfixable = ["F841"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403", "E402"]

[tool.ruff.isort]
known-first-party = ["lvmguider"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu"]

[tool.pytest.ini_options]
addopts = "--cov gtools --cov-report xml --cov-report html --cov-report term"

[tool.coverage.run]
branch = true
include = ["gtools/*"]
omit = [
    "*/__init__.py",
    "gtools/__main__.py"
]

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:"
]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
